--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "ambiance-creator-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
-  }
+	"name": "ambiance-creator-web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "node server.mjs",
+		"build": "next build",
+		"start": "NODE_ENV=production node server.mjs",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "14.2.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-resizable-panels": "^2.0.19",
+		"socket.io": "^4.7.5",
+		"socket.io-client": "^4.7.5"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.3",
+		"sass": "^1.76.0",
+		"typescript": "^5"
+	}
 }
